# fcc-online

./: .gitignore  .gitmodules  README.md  dump.odb  exptab
alarms/: alarm_notification.sh
analyzers/python/: pyanalyzer.py
frontends/arduino_fe/: ArduinoBME680.ino  arduino_fe.py
frontends/arduino_fe/ArduinoBME680/: ArduinoBME680.ino
frontends/ardutable_fe/: ardutable_fe.py
frontends/ardutable_fe/rotatore_3/: rotatore_3.ino
frontends/ardutable_fe/rotatore_l298n/: rotatore_l298n.ino
frontends/ardutable_fe/rotatore_tb6600/: rotatore_3.ino  rotatore_NewDriver.ino
frontends/caenhv_fe/: CMakeLists.txt  caenhv_fe.cxx
frontends/keithley_fe/: keithley_fe.py
frontends/lauda_fe/: lauda_fe.py
frontends/midasequipment_gaudino/: CMakeLists.txt  list_infos.txt
frontends/midasequipment_gaudino/include/: cane.h
frontends/midasequipment_gaudino/src/: cane.cpp  midas_UI.cxx
frontends/n1081b_fe/: n1081b_fe.py  test.py
frontends/tek_fe/: CMakeLists.txt
frontends/tek_fe/include/: tek.h
frontends/tek_fe/src/: tek.cpp  tek_cl.cpp  tek_fe.cpp
frontends/vx2730_fe/: CMakeLists.txt
frontends/vx2730_fe/include/: CaenData.h  CaenDigitizer.h  CaenDigitizerMidas.h  CaenEndpoint.h  CaenException.h  CaenParameter.h
frontends/vx2730_fe/src/: CaenData.cxx  CaenDigitizer.cxx  CaenDigitizerMidas.cxx  CaenEndpoint.cxx  CaenException.cxx  CaenParameter.cxx  main.c  main.cxx  vx2730_fe.cxx
scripts/: plot_IVcurve.py  pyIVCurve.py
userfiles/sequencer/: vx2730_anglescan.msl  vx2730_tb2025.msl
web/: caenhv.html  keithley.html
